added security events for almost all actions in Scoold and tied them into the new audit log feature